erDiagram
  organizations {
    text id PK
    text name
    text slug
    text description
    timestamp created_at
    timestamp updated_at
  }

  organization_members {
    text organization_id FK
    text user_id FK
    text role
    timestamp created_at
  }

  invitations {
    text id PK
    text organization_id FK
    text email
    text role
    text token
    timestamp expires_at
    timestamp accepted_at
    timestamp created_at
  }

  organization_settings {
    text organizationId PK FK
    jsonb widgetConfig
    jsonb portalConfig
    text customDomain
    timestamp createdAt
    timestamp updatedAt
  }

  user {
    text id PK
    text name
    text email
    text role
    boolean email_verified
    text image
    timestamp created_at
    timestamp updated_at
  }

  user_profiles {
    text user_id PK FK
    text name
    timestamp created_at
    timestamp updated_at
  }

  session {
    text id PK
    timestamp expires_at
    text token
    text user_id FK
  }

  account {
    text id PK
    text user_id FK
    text provider_id
    text account_id
  }

  verification {
    text id PK
    text identifier
    text value
    timestamp expires_at
  }

  feedback {
    int feedbackId PK
    text title
    text description
    text type
    text priority
    text status
    text organizationId
    boolean submittedOnBehalf
    text submittedBy FK
    jsonb customerInfo
    timestamp createdAt
    timestamp updatedAt
    timestamp deletedAt
    boolean autoClassified
    text processingStatus
    timestamp processedAt
    int githubIssueId
    int githubIssueNumber
    text githubIssueUrl
    timestamp githubSyncedAt
    text githubStatus
  }

  attachments {
    int attachmentId PK
    int feedbackId FK
    text fileName
    text filePath
    int fileSize
    text mimeType
    timestamp createdAt
  }

  votes {
    int voteId PK
    int feedbackId FK
    text visitorId
    text userId FK
    timestamp createdAt
  }

  comments {
    int commentId PK
    int feedbackId FK
    text userId FK
    text authorName
    text authorEmail
    text guestToken
    text content
    boolean isInternal
    timestamp createdAt
    timestamp updatedAt
  }

  status_history {
    int historyId PK
    int feedbackId FK
    text oldStatus
    text newStatus
    text changedBy FK
    timestamp changedAt
    text comment
  }

  tags {
    int tagId PK
    text name
    text slug
    text color
    text description
    timestamp createdAt
  }

  feedback_tags {
    int id PK
    int feedbackId FK
    int tagId FK
    timestamp createdAt
  }

  ai_processing_results {
    int id PK
    int feedbackId FK
    jsonb classification
    jsonb tagSuggestions
    jsonb duplicateCandidates
    int processingTime
    text status
    text errorMessage
    timestamp createdAt
    timestamp updatedAt
  }

  duplicate_feedback {
    int id PK
    int originalFeedbackId FK
    int duplicateFeedbackId FK
    int similarity
    text status
    text confirmedBy FK
    timestamp confirmedAt
    timestamp createdAt
  }

  notifications {
    int notificationId PK
    text userId FK
    int feedbackId FK
    text type
    jsonb data
    text status
    timestamp sentAt
    text error
    timestamp createdAt
  }

  notification_preferences {
    text userId PK FK
    boolean statusChange
    boolean newComment
    timestamp updatedAt
  }

  api_keys {
    int keyId PK
    text name
    text hashedKey
    text prefix
    text organizationId FK
    boolean disabled
    timestamp lastUsed
    timestamp createdAt
    timestamp updatedAt
  }

  webhooks {
    int webhookId PK
    text organizationId FK
    text name
    text url
    text secret
    jsonb events
    boolean enabled
    timestamp createdAt
    timestamp updatedAt
  }

  webhook_events {
    int eventId PK
    int webhookId FK
    text eventType
    jsonb payload
    text status
    int responseStatus
    text responseBody
    int retryCount
    int maxRetries
    timestamp nextRetryAt
    timestamp deliveredAt
    timestamp createdAt
    timestamp updatedAt
  }

  github_integrations {
    int id PK
    text organizationId FK
    text accessToken
    text owner
    text repo
    jsonb labelMapping
    jsonb statusMapping
    boolean autoSync
    text webhookSecret
    timestamp createdAt
    timestamp updatedAt
  }

  organizations ||--o{ organization_members : has
  organizations ||--o{ invitations : has
  organizations ||--|| organization_settings : config
  organizations ||--o{ feedback : owns
  organizations ||--o{ api_keys : owns
  organizations ||--o{ webhooks : owns
  organizations ||--o{ github_integrations : owns

  user ||--o{ organization_members : member
  user ||--|| user_profiles : profile
  user ||--o{ session : sessions
  user ||--o{ account : accounts
  user ||--o{ notifications : receives
  user ||--|| notification_preferences : prefs

  feedback ||--o{ attachments : has
  feedback ||--o{ votes : has
  feedback ||--o{ comments : has
  feedback ||--o{ status_history : status
  feedback ||--o{ feedback_tags : tags
  feedback ||--o{ ai_processing_results : ai
  feedback ||--o{ duplicate_feedback : duplicates
  feedback ||--o{ notifications : notifies

  tags ||--o{ feedback_tags : maps

  webhooks ||--o{ webhook_events : events
